# HelloComputations

./: CMakeLists.txt  CMakePresets.json  Computation.cpp  Computation.hpp  Main.cpp  Makefile  README.md  test_computation.cpp
